# thesis

./: .gitignore  Notebook.ipynb  README.md
Thesis Project - Final/data/: final_dataset.csv
Thesis Project - Final/notebooks/: 01_data_preparation.ipynb  02_embedding_generation.ipynb  03_evaluation.ipynb  04_generalization_validation.ipynb  05_extended_analysis.ipynb  06_demo.ipynb
data collection/: 00_translation_verification.ipynb  build_balanced_dataset.py  build_balanced_dataset_bit.py  data_quality_verification.ipynb  jamk_scraper.ipynb  label_full_content.py  validate_dataset.py  verify_constructed.py
data/processed/: dataset_raw_configs.csv  embedding_timing.csv  token_statistics.csv  truncation_report.csv
data/raw/: verified_final_dataset_BIT.csv
data/results/summary_tables/: cv_5fold_results.csv  (+2 more)
demo/: README.txt  app.py  tietojenkasittely.json
demo/static/: index.html
docs/: README.md
environment/: environment.yml  requirements.txt
notebooks/: 01_data_preparation A.ipynb  01_data_preparation.ipynb  02_embedding_generation.ipynb  03_evaluation A.ipynb  03_evaluation.ipynb  04_generalization_validation.ipynb  05_extended_analysis.ipynb  06_demo.ipynb
results/appendices/: appendix_4_full_ict_cv_results.csv
similarity_service/: .gitignore  Internship_Handover.md  README.md  Research_Notes.md  parity_report.md  pyproject.toml
similarity_service/app/: __init__.py  config.py  inference.py  main.py  preprocessing.py  schemas.py
similarity_service/examples/: client.py  parity_check.py
similarity_service/tests/: conftest.py  test_service.py
(+116 files in other folders)
