[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilingual-course-similarity-service"
version = "0.1.0"
description = "FastAPI service wrapping the LaBSE pipeline from the JAMK thesis on bilingual course description similarity."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Madee Uththara Deegoda Gamage" }
]

# Dependencies aligned with the thesis_env environment used for Notebooks
# 1 to 5. Pinning to major versions only so that small patch updates work.
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "numpy>=1.24,<2.0",
    "torch>=2.2",
    "sentence-transformers>=2.5,<4.0",
    "transformers>=4.40,<5.0",
    "spacy>=3.7,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["app*"]

# Reminder: after installing dependencies, install the two spaCy models
# used in Notebook 1:
#   python -m spacy download fi_core_news_sm
#   python -m spacy download en_core_web_sm
